ほかブラウザから起動するよう修正

--- a/main.html
+++ b/main.html
@@ -9,9 +9,11 @@
 
 <body>
   <h1>koekoe読み上げツール</h1>
-  <input type="text" id="text" name="text" value="吾輩は猫である。" placeholder="読み上げたいテキストを入力してください" /> -->
-  <button type="button" class="read-btn">読み上げる</button>
-  <p>上記テキストを読み上げます。<br>「読み上げる」ボタンをクリックしてください。</p>
+  <span>配信を開始</span>
+  <div class="toggle_button">
+    <input id="cast_start" class="toggle_input" type='checkbox'/>
+    <label for="cast_start" class="toggle_label">
+  </div>
 </body>
 
 </html>
