再生バグ修正

--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="ja">
 
 <head>
@@ -11,4 +11,4 @@
   <h1>koekoe読み上げツール</h1>
 </body>
 
-</html>
+</html> -->
